# prudnikova

./: .gitignore  CMakePresets.json  README.md
.github/workflows/: cmake-single-platform.yml
doc/: Makefile  diplom.tex  presa.tex
doc/bib/: vof.bib
src/: CMakeLists.txt  CMakeLists_BACKUP_116746.txt  CMakeLists_BASE_116746.txt  CTestTestfile.cmake  Makefile  PLIC.cpp  PLIC.h  approximation.cpp  approximation.h  area.cpp  area.h  assemble.cpp  assemble.h  flux.cpp  flux.h  grid.cpp  grid.h  grids.cpp  grids.h  input.txt  line_equation.cpp  line_equation.h  linear.cpp  linear.h  main  main.cpp  operations.cpp  operations.h  out.txt  printfile.cpp  printfile.h  readfile.cpp  readfile.h  rungekutta.cpp  rungekutta.h  slau.cpp  slau.h  structures.cpp  structures.cpp.orig  structures.h  (+3 more)
src/math/: CMakeLists.txt
src/tests/: CMakeLists.txt  PLIC.cpp  area.cpp  area.cpp.orig  linear.cpp  polygon_area  slau.cpp
